Oracle Cloud の無料枠のスペックに OCPU の記載を追加

--- a/articles/f3616721668bd8.md
+++ b/articles/f3616721668bd8.md
@@ -1,16 +1,21 @@
 ---
-title: "Oracle Cloud で無料で Kubernetes クラスタを構築する方法"
+title: "Oracle Cloud で実験的な Kubernetes クラスタを無料で構築する方法"
 emoji: "😊"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["Kubernetes", "k8s", "OCI"]
 published: true
 ---
 
-Oracle Cloud には非常に寛容な無料枠があり、たとえば次のような構成の Kubernetes クラスタを構築できます。
+[Oracle Cloud には非常に寛容な無料枠があり](https://docs.oracle.com/ja-jp/iaas/Content/FreeTier/freetier_topic-Always_Free_Resources.htm)、たとえば次のような構成の Kubernetes クラスタを構築できます。
 
-* コントロールプレーン: メモリ 12 GB
-* ワーカーノード1: メモリ 6 GB
-* ワーカーノード2: メモリ 6 GB
+* **コントロールプレーン**: 2 COPU & メモリ 12 GB
+* **ワーカーノード1**: 1 OCPU & メモリ 6 GB
+* **ワーカーノード2**: 1 OCPU & メモリ 6 GB
+
+このスペックはドキュメントの次の部分から来ています。
+
+> すべてのテナンシは、Armプロセッサを含むVM.Standard.A1.Flexシェイプを使用するVMインスタンスに対して、月ごとに最初の3,000 OCPU時間および18,000 GB時間を無料で取得します。**Always Free テナンシの場合、これは4 OCPUおよび24 GBのメモリーと同等です**。
+
 
 この記事では実験的な Kubernetes クラスタを Oracle Cloud に構築する手順について扱います。なお、先行事例はすでにいくつかあり、僕自身も「[Oracle Cloudの無料枠でKubernetesクラスタを構築する(完全版) | blog.potproject.net](https://blog.potproject.net/2021/06/01/oracle-cloud-kubernetes)」を参考にしました。特に iptables の設定はそのまま使用しています。主な違いは次の通りです。
 
