--- a/articles/ebcb6855f02e7a.md
+++ b/articles/ebcb6855f02e7a.md
@@ -21,11 +21,11 @@ $ npx create-next-app@latest example-app --use-npm --typescript
 このコマンドを実行するといくつか選択肢が与えられるので、次のように答えます。
 
 ```
-✔ Would you like to use ESLint? … No / Yes
-✔ Would you like to use Tailwind CSS? … No / Yes
-✔ Would you like to use `src/` directory? … No / Yes
-✔ Would you like to use App Router? (recommended) … No / Yes
-✔ Would you like to customize the default import alias? … No / Yes
+✔ Would you like to use ESLint? … No / Yes  [=> Yes]
+✔ Would you like to use Tailwind CSS? … No / Yes  [=> No]
+✔ Would you like to use `src/` directory? … No / Yes  [=> Yes]
+✔ Would you like to use App Router? (recommended) … No / Yes  => [=> Yes]
+✔ Would you like to customize the default import alias? … No / Yes  => [=> No]
 ```
 
 ところで `create-next-app` コマンドは `--example` オプションでテンプレートプロジェクトを指定できます。[しかし選択肢が多すぎて](https://github.com/vercel/next.js/tree/canary/examples)逆に大変に感じたため、本記事では使用しません。
