--- a/articles/d9ced1f3a9d411.md
+++ b/articles/d9ced1f3a9d411.md
@@ -10,7 +10,7 @@ published: true
 
 新規にウェブアプリケーションを React (フロントエンド) と Spring Boot (バックエンド) で構築したときの初期設定に関するメモです。特に React の設定について焦点を置いて記述します。Spring Boot は枯れた [Spring Initializr](https://start.spring.io/) で容易に設定できる一方、React 関連の設定はトレンドの移り変わりが激しいためです。なお、この記事では [Vite](https://ja.vitejs.dev/) で React の設定をします。
 
-本記事の通りに設定すると、次のようなディレクトリ構成になります。`frontend/` には React アプリケーションがあり、`backend/` には Spring Boot アプリケーションがある、というイメージです。
+本記事の通りに設定すると、次のようなディレクトリ構成になります。`frontend/` には React アプリケーションがあり `backend/` には Spring Boot アプリケーションがある、というイメージです。
 
 ```
 $ tree .
