Publish an article

--- a/articles/93225ad5a4d3d7.md
+++ b/articles/93225ad5a4d3d7.md
@@ -3,7 +3,7 @@ title: "CKS 受験体験記"
 emoji: "🦔"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["Kubernetes", "CKS", "k8s"]
-published: false
+published: true
 ---
 
 先日 [CKS (Certified Kubernetes Security Specialist)](https://training.linuxfoundation.org/certification/certified-kubernetes-security-specialist/) に合格しました。記憶が新しい内に「受験体験記」を書き残そうと思います。
