--- a/articles/405ac9c010efd5.md
+++ b/articles/405ac9c010efd5.md
@@ -6,11 +6,11 @@ topics: ["Search", "Startpage", "Chrome"]
 published: true
 ---
 
-ChatGPT の登場により、一般的なウェブ検索を使うことはだいぶ減りました。とはいえ ChatGPT は新しい知識を知らないので、最新の知識を得るため、まれに検索エンジンを使うこともあると思います。
+ChatGPT の登場により、一般的なウェブ検索を使うことはだいぶ減りました。とはいえ ChatGPT は新しい知識を持たないので、最新の情報を得るため、まれに検索エンジンを使うこともあると思います。
 
 僕は検索エンジンに [Startpage](https://www.startpage.com/) を使用しています。これは `The world's most private search engine.` を標榜している検索エンジンです。[彼ら自身の説明では、ユーザーの情報を一切保持せずに検索結果を返すサービスとしています](https://www.startpage.com/en/how-startpage-works/)。類似のサービスで、もっとも知名度の高いものは [DuckDuckGo](https://duckduckgo.com/) だと思います。
 
-ところで、僕は DuckDuckGo の検索品質は「あまり良くない」と思っています。DuckDuckGo はバックエンドの検索エンジンとして Bing を使用しているのですが、Bing 自体の検索結果がいまひとつ Google などに比べるといまいちだと思っています。これは日本語情報を検索しているときに強く感じます。過去に個人ブログでもこれについて書いたことがあります。
+ところで、僕は DuckDuckGo の検索品質は「あまり良くない」と思っています。DuckDuckGo はバックエンドの検索エンジンとして Bing を使用しているのですが、Bing 自体の検索結果がいまひとつ Google などに比べると劣ると思っています。これは日本語情報を検索しているときに強く感じます。過去に個人ブログでもこれについて書いたことがあります。
 
 * [日本語圏のユーザーには DuckDuckGo よりも startpage.com がオススメ](https://mahata.gitlab.io/post/2019-12-05-startpage/)
 
@@ -22,7 +22,7 @@ ChatGPT の登場により、一般的なウェブ検索を使うことはだい
 
 これは Startpage の意図的な設計によるものだと思います。よくある検索エンジンでは、検索クエリを URL パラメーターに付与します。たとえば `?q=search-query` のようなものです。Startpage は POST リクエストで検索クエリを受け取るため、URL から検索クエリがわからないようになっています。同じように、ページタイトルに検索クエリを含めないのは、ブラウザを背後から覗き見られてもプライバシーが守られるようにする配慮だと想像できます。
 
-しかし、これはユーザビリティをトレードオフにしており、個人的には耐え難いものがあります。これを解消するための [Startpage Nicer Title Extension](https://chromewebstore.google.com/u/1/detail/startpage-nicer-title-ext/bnmehmalocfmlifckddiolikhcdkaifa) という Chrome Extension を作りました。これをインストールすると、タブの様子は次のようになります。
+しかし、これはユーザビリティをトレードオフにしており、個人的には耐え難いです。これを解消するための [Startpage Nicer Title Extension](https://chromewebstore.google.com/u/1/detail/startpage-nicer-title-ext/bnmehmalocfmlifckddiolikhcdkaifa) という Chrome Extension を作りました。これをインストールすると、タブの様子は次のようになります。
 
 ![Chrome 拡張あり](/images/startpage-extension/with-extension-compressed.gif)
 
